Fix whitespace on homepage

--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -8,6 +8,9 @@
 @import "navbar-homepage.scss";
 @import "signup.scss";
 
+body{
+    overflow-x: hidden;
+}
 //Intro space linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%)
 .container{
   padding: 0;
